k8s/dev/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: kofitone/dev-backend:87dd0f4dcdcda5d7bff342d77a7ae7eeb7a68a25
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "500m"      # minimum CPU guaranteed
              memory: "512Mi"  # minimum RAM guaranteed
            limits:
              cpu: "1"         # maximum CPU allowed
              memory: "1Gi"    # maximum RAM allowed
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dev
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
