k8s/dev/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: kofitone/dev-frontend:b3eebfc52eb391881cc9e20d120a10543566ec9f
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"       # minimum CPU guaranteed
              memory: "256Mi"   # minimum RAM guaranteed
            limits:
              cpu: "500m"       # maximum CPU allowed
              memory: "512Mi"   # maximum RAM allowed
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dev
  # Removed AWS load balancer annotation
spec:
  type: ClusterIP       # Internal-only service, exposed via ingress
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
