k8s/dev/postgress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init-script
          configMap:
            name: userapp-config
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: dev
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
